--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,44 @@
-
-body{
-    font-family: 'Poppins', sans-serif;
+body {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
 }
 
-h1{
+h1 {
   font-size: 50px;
+}
 
+.one_1 {
+  color: orange;
+}
+
+section {
+  display: flex;
+}
+
+.helf-width {
+  width: 50%;
+  padding-left: 2%;
+}
+
+.helf-width img {
+  width: 100%;
+
+}
+
+.link-button {
+  text-decoration: none;
+  background-image: linear-gradient(orange, tomato);
+  color: white;
+  font-weight: 700;
+  padding: 10px 40px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.top-banner {
+  background-image: url(../images/top-banner.png);
+  background-repeat: no-repeat;
 }
