--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ h1 {
 
 section {
   display: flex;
+  margin-bottom: 150px;
 }
 
 .helf-width {
@@ -21,7 +22,7 @@ section {
 }
 
 .helf-width img {
-  width: 100%;
+  width: 80%;
 
 }
 
@@ -41,4 +42,11 @@ section {
 .top-banner {
   background-image: url(../images/top-banner.png);
   background-repeat: no-repeat;
+}
+
+.dream-big {
+  background-image: url(../images/dream-bg.png);
+  background-repeat: no-repeat;
+  background-position: right;
+
 }
