--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ h2 {
 
 }
 
+
+
+
+
 .Experience-itam {
   width: 40%;
   margin-right: 5%;
@@ -73,12 +77,40 @@ h2 {
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+
+
+
+
+
 }
+
+
 
 .experiance_area {
   background-image: url(../images/exp-bg.png);
   background-repeat: no-repeat;
   background-position: left;
+}
+
+#web-dev-experiance {
+  border-left: 7px solid;
+  border-image: linear-gradient(orange, tomato);
+
+  border-image-slice: 1;
+
+}
+
+#web-dev-experiance1 {
+  border-left: 7px solid;
+
+  border-image: linear-gradient(blue, cyan);
+  border-image-slice: 1;
+
+
+}
+
+footer p {
+  text-align: center;
 
 
 }
